--- a/MVC1/src/view/home.css
+++ b/MVC1/src/view/home.css
@@ -6,7 +6,8 @@ body {
 
 form{
   width: 1300px;
-  max-height: 640px;
+  max-height: 620px;
+  height: auto;
   margin: 0 auto;
   padding: 20px;
   background-color: #f2f2f2;
@@ -19,26 +20,11 @@ form{
   overflow-y: scroll;
 }
 
-form::-webkit-scrollbar{
-width: 30px;
-}
-
-form::-webkit-scrollbar-track{
-background-color: #ccc;
-border-radius: 5px;
-}
-
-form::-webkit-scrollbar-thumb{
-background-color: gray;
-border-radius: 5px;
-border: 5px solid gray;
-}
-
 form div{
-  display: block;
-  overflow-y: scroll;
+  display: grid;
+    grid-template-columns: repeat(3, 2fr);
+    grid-auto-rows: minmax(100px, auto);
 }
-
 
 div{
   display: flex;
@@ -62,16 +48,4 @@ color: aliceblue;
 border: none;
 font-size: 16px;
 text-decoration: none;
-display: inline-block;
-position: relative;
-left: 50%;
-transform: translateX(-50%);
-}
-
-h3{
-text-align: center;
-}
-
-p{
-text-align: center;
 }
