alterações no codigo

--- a/MVC1/src/view/home.html
+++ b/MVC1/src/view/home.html
@@ -57,6 +57,7 @@
 
               materialElement.innerHTML = `
                 <p>Nome: ${material.nome}</p>
+                <img src:"${arquivoURL}">
                 <p>Descrição: ${material.description}</p>
                 <p>Data de Publicação: ${material.releaseDate}</p>
                 <a href="${arquivoURL}">Download</a>
